@@ -4,6 +4,7 @@ h3. 3.0.0 unreleased
 
 * remove 'testing' recipe (partly replaced by 'tests4' recipe)
 * remove options for Rails 3.2 example applications
+* remove MongoDB option from database choices
 * remove Mongoid-specific code
 
 h3. 2.6.13 June 14, 2014
